# master-thesis

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skill/bib/examples/: tagged-entry.bib
.agents/skill/bib/references/: field-conventions.md
.agents/skill/bib/src/bib/: __init__.py  config.py  models.py
.agents/skills/bib/: AGENTS.md  README.md  SKILL.md
.agents/skills/bib/agents/: openai.yaml
.agents/skills/bib/examples/: config.yaml
.agents/skills/bib/references/: scoring.md
.agents/skills/bib/tests/: test_bib.py
code/TCGA-UT/docs/: Dataset TCGA_UT_addendum.md
code/TCGA-UT/main/: BatchBalancingSampler.py  FocalLoss.py  LossFactory.py  MLP.py  OKOHardLoss.py  README.md  SKLearnModel.py  TCGAUTDatasetImbalanced.py  sample_TCGA_UT_balanced.py  sample_TCGA_UT_imbalanced.py  split.py  test.py  test_sample_TCGA_UT_balanced.py  train.py  utils.py  visualizations.py
code/TCGA-UT/main/scripts/: run_balanced_sampling.sh  run_imbalanced_sampling.sh  run_imbalanced_sampling_arr.sh  run_training.sh  run_training_arr.sh  run_training_knn.sh  run_training_knn_arr.sh  run_training_ncc.sh  run_training_ncc_arr.sh  run_visualizations.sh  run_visualizations_point_plot.sh
docs/: faq.md  glossary.md
meetings/: 2026-04-27.md  2026-05-05.md
papers/: datasets.bib  exclusions.bib  review.bib  sources.bib
papers/basics/: _SUMMARY.md
papers/class imbalance/: _SUMMARY.md  _TAXONOMY.md
papers/few-example/: _SUMMARY.md
papers/foundation models/: _SUMMARY.md
papers/foundation models/models/: _SUMMARY.md
papers/methods/: _SUMMARY.md
(+27 files in other folders)
