[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "master-thesis-tools"
version = "0.1.0"
description = "Utility tooling for the master-thesis repository"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1,<0.29",
    "pillow>=12.2.0,<13",
    "pyyaml>=6.0.2,<7",
]

[project.scripts]
bib = "bib.cli:main"

[dependency-groups]
dev = [
    "click>=8.3.1",
    "pyright>=1.1.408",
    "pysonar>=1.3.0.4086",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.4,<5",
    "ruff>=0.14.14",
    "truststore>=0.10.4",
    "vulture>=2.14",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = ".agents/skill/bib/src"

[tool.setuptools.packages.find]
where = [".agents/skill/bib/src"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = [".agents/skill/bib/tests"]
